# mc-vla-repo

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
eval/: action_mapping.py  agent_wrapper.py  draw_utils.py  evaluate_e1.py  evaluate_e2_composite.py  evaluate_e2_single.py  file_utils.py  load_model.py
eval/assets/recipes_type_list/: list_minecraft-blasting.txt  list_minecraft-campfire_cooking.txt  list_minecraft-crafting_shaped.txt  list_minecraft-crafting_shapeless.txt  list_minecraft-crafting_special_armordye.txt  list_minecraft-crafting_special_bannerduplicate.txt  list_minecraft-crafting_special_bookcloning.txt  list_minecraft-crafting_special_firework_rocket.txt  list_minecraft-crafting_special_firework_star.txt  list_minecraft-crafting_special_mapcloning.txt  list_minecraft-crafting_special_mapextending.txt  list_minecraft-crafting_special_repairitem.txt  list_minecraft-crafting_special_shielddecoration.txt  list_minecraft-crafting_special_shulkerboxcoloring.txt  list_minecraft-crafting_special_suspiciousstew.txt  list_minecraft-crafting_special_tippedarrow.txt  list_minecraft-smelting.txt  list_minecraft-smithing.txt  list_minecraft-smoking.txt  list_minecraft-stonecutting.txt
eval/config/craft/: base.yaml  craft_bread.yaml  craft_crafting_table.yaml  craft_diamond_boots.yaml  craft_diamond_chestplate.yaml  (+5 more)
eval/env_helper/: craft_agent.py  gui_agent.py  smelt_agent.py
eval/scripts/: rollout-E1.sh  rollout-E2_composite.sh  rollout-E2_single.sh
minestudio/benchmark/: test.py
minestudio/models/: __init__.py  base_policy.py
minestudio/simulator/: entry.py
(+69 files in other folders)
