[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cab_with_simulator"
description = "CaB with a Minecraft Simulator."
version = "1.0.0"
dependencies = [
    #
    # "cab @ file://./minestudio/external/cab_vla",
    "cab",
    # "flash_attn==2.7.3",  # -- install *AFTER* editable install (follow README) # pip install flash-attn==2.7.3 --no-build-isolation
    #
    "av==13.1.0",
    "opencv-python==4.10.0.82",
    "opencv-python-headless==4.10.0.82",
    # "setuptools",
    "tqdm",
    "numpy",
    "requests",
    # "ipython",
    # "typing",
    "gym==0.26.2",
    "gym3==0.3.3",
    "gymnasium",
    "hydra_colorlog",
    "hydra-core>=1.3.2",
    "lmdb",
    "wandb",
    # "torch",
    "lightning",
    #"scipy",
    "rich",
    "coloredlogs",
    "daemoniker",
    "lxml",
    "cuda-python==12.9.0",
    "diskcache",
    "albumentations",
    "einops",
    "timm",
    "transformers",
    "Pyro4",
    "xmltodict",
    "pyrender",
    "pyglet",
    "imgui",
    "pyopengl",
    "ray",
    "minecraft_data==3.20.0",
    "absl-py",
    "dm-tree",
    "x_transformers",
]
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["minestudio*"]

[tool.setuptools.package-data]
"minestudio" = ["**/*.json", "**/*.sh", "**/*.java", "**/*.j2"]

[tool.setuptools.dynamic]
readme = { file = "README.md" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
